--- a/#src/scss/styles.scss
+++ b/#src/scss/styles.scss
@@ -9,8 +9,15 @@
 // modals
 @import "_modal.scss";
 @import "_modal-polit.scss";
+@import "type-styles.scss";
 
 //components
 @import "header.scss";
 @import "hero.scss";
 @import "second.scss";
+@import "third.scss";
+@import "footer.scss";
+@import "delivery.scss";
+@import "contacts.scss";
+@import "product.scss";
+@import "catalog.scss";
