--- a/#src/scss/_modal.scss
+++ b/#src/scss/_modal.scss
@@ -1,127 +1,51 @@
-.modal-call {
+.modal-buy {
 	display: none;
-	max-width: 530px;
+	max-width: 600px;
 	width: 100%;
-	padding: 95px 0px 76px 0px;
-	background: #222226;
-	@media (max-width: 768px) {
-		@include adaptiv(padding-top, 95, 60, 768, 320);
-		@include adaptiv(padding-bottom, 76, 50, 768, 320);
+	padding: 47px 20px 47px 20px;
+	background: #d2b6a8;
+	border: 18px solid #f5e6e0;
+	@media (max-width: 576px) {
+		border: none;
 	}
 	// .modal-comment__close
 	&__close {
 	}
 	// .modal-comment__container
 	&__container {
-		max-width: 410px;
+		max-width: 400px;
 		margin: 0 auto;
-		padding: 0 20px;
 	}
 	// .modal-comment__content
 	&__content {
 	}
 	// .modal-comment__title
 	&__title {
-		margin-bottom: 65px;
-		font-weight: 700;
+		margin-bottom: 33px;
+		font-family: "Bradobrei";
 		font-size: 36px;
+		line-height: 1.5;
 		text-align: center;
 		text-transform: uppercase;
-		color: #fff;
+		color: #ffffff;
 		@media (max-width: 768px) {
 			@include adaptiv(font-size, 36, 24, 768, 320);
-			@include adaptiv(margin-bottom, 65, 30, 768, 320);
-		}
-	}
-	// .modal-comment__form
-	.wpcf7-form {
-		display: flex;
-		flex-direction: column;
-		margin-bottom: 30px;
-		@media (max-width: 576px) {
-			margin-bottom: 20px;
-		}
-	}
-	.wpcf7-form-control-wrap {
-		margin-bottom: 25px;
-		@media (max-width: 420px) {
-			margin-bottom: 20px;
-		}
-		input {
-			display: flex;
-			align-items: center;
-			padding: 5px 15px 5px 23px;
-			width: 100%;
-			height: 55px;
-			border: 1px solid #a4a4a4;
-			font-size: 20px;
-			color: #a4a4a4;
-			background-color: transparent;
-			@media (max-width: 768px) {
-				@include adaptiv(font-size, 20, 16, 768, 320);
-			}
-			@media (max-width: 576px) {
-				height: 50px;
-			}
-			@media (max-width: 420px) {
-				height: 45px;
-			}
-			&:focus {
-				color: #000;
-				border: 1px solid #ffffff;
-				background-color: #fff;
-				&::placeholder {
-					color: #000;
-				}
-			}
+			@include adaptiv(margin-bottom, 33, 25, 768, 320);
 		}
 	}
 
-	// .modal-comment__btn
-	&__btn {
-		font-weight: 700;
-		font-size: 20px;
-		line-height: 1.5;
-		color: #000000;
-		background: #fcb813;
-		text-transform: uppercase;
-
-		transform: perspective(1px) translateZ(0);
-		position: relative;
-		transition-property: color;
-		transition-duration: 0.3s;
-		&::before {
-			content: "";
-			position: absolute;
-			z-index: -1;
-			top: 0;
-			bottom: 0;
-			left: 0;
-			right: 0;
-			background: #fff;
-			transform: scaleX(0);
-			transform-origin: 50%;
-			transition-property: transform;
-			transition-duration: 0.3s;
-			transition-timing-function: ease-out;
-		}
-		&:hover {
-			color: #000000;
-			&::before {
-				transform: scaleX(1);
-			}
-		}
-
-		@media (max-width: 768px) {
-			@include adaptiv(font-size, 20, 18, 1200, 768);
-		}
-	}
 	&__privacy {
-		font-size: 12px;
-		line-height: 1.33;
-		color: #c4c4c4;
+		font-size: 14px;
+		line-height: 1.3;
+		color: #715648;
+		@media (max-width: 576px) {
+			font-size: 12px;
+		}
 		@media (max-width: 420px) {
 			font-size: 11px;
+		}
+		@media (max-width: 370px) {
+			font-size: 10px;
 		}
 	}
 	.to-privacy {
@@ -129,17 +53,100 @@
 	}
 }
 
-.close-modal {
-	width: 47px;
-	height: 47px;
-	position: absolute;
-	top: 0;
-	right: 0;
-	background: #fff url(../img/close-modal.svg) 50% 50% no-repeat;
-	border: 1px solid #000000;
-	cursor: pointer;
-	@media (max-width: 576px) {
-		width: 40px;
-		height: 40px;
+// .modal-comment__form
+.form-modal-buy {
+	display: flex;
+	flex-direction: column;
+	margin-bottom: 20px;
+	// @media (max-width: 576px) {
+	// 	margin-bottom: 20px;
+	// }
+
+	&__item {
+		width: 100%;
+		margin-bottom: 25px;
+		@media (max-width: 576px) {
+			margin-bottom: 20px;
+		}
+		@media (max-width: 370px) {
+			margin-bottom: 10px;
+		}
+		p {
+			font-size: 14px;
+			line-height: 2;
+			text-transform: uppercase;
+			color: #ffffff;
+			@media (max-width: 420px) {
+				font-size: 12px;
+			}
+		}
+
+		input {
+			display: flex;
+			align-items: center;
+			padding: 10px 15px;
+			width: 100%;
+			height: 50px;
+			font-size: 20px;
+			color: #000;
+			background: #f5e6e0;
+			@media (max-width: 768px) {
+				@include adaptiv(font-size, 20, 16, 768, 320);
+			}
+			@media (max-width: 576px) {
+				height: 45px;
+			}
+			@media (max-width: 370px) {
+				height: 40px;
+			}
+			&:focus {
+				background-color: #fff;
+			}
+		}
+
+		textarea {
+			display: block;
+			padding: 10px 15px;
+			width: 100%;
+			height: 150px;
+			font-size: 20px;
+			color: #000;
+			background: #f5e6e0;
+			@media (max-width: 768px) {
+				@include adaptiv(font-size, 20, 16, 768, 320);
+			}
+			// @media (max-width: 420px) {
+			// 	height: 45px;
+			// }
+			&:focus {
+				background-color: #fff;
+			}
+		}
 	}
+
+	&__btn {
+		font-weight: 700;
+		font-size: 18px;
+		line-height: 1.56;
+		color: #fff;
+		background: #632c33;
+		text-transform: uppercase;
+		min-height: 60px;
+		@media (max-width: 576px) {
+			min-height: 50px;
+			font-size: 16px;
+		}
+	}
+}
+
+// .modal-comment__btn
+
+.close-modal {
+	width: 21px;
+	height: 21px;
+	position: absolute;
+	top: 14px;
+	right: 14px;
+	background: url(../img/close-modal.svg) 50% 50% / contain no-repeat;
+	cursor: pointer;
 }
