--- a/#src/scss/_overall.scss
+++ b/#src/scss/_overall.scss
@@ -1,6 +1,7 @@
 .container--big {
 	max-width: 1920px;
 	margin: 0 auto;
+	width: 100%;
 	padding-left: 300px;
 	position: relative;
 }
@@ -42,6 +43,10 @@ body {
 	left: 0;
 	top: 0;
 	width: 100%;
+}
+
+.dev {
+	color: #632c33;
 }
 
 .help-img {
@@ -107,6 +112,14 @@ body {
 	text-transform: uppercase;
 }
 
+.title {
+	font-family: "Bradobrei";
+	font-size: 36px;
+	line-height: 1.28;
+	text-transform: uppercase;
+	color: #aa8f82;
+}
+
 .title-2 {
 	font-family: "Bradobrei";
 	font-size: 30px;
@@ -137,9 +150,9 @@ input[type="submit"] {
 }
 
 .cross {
-	width: 14px;
-	height: 14px;
-	flex: 0 0 14px;
+	width: 20px;
+	height: 16px;
+	flex: 0 0 20px;
 	position: relative;
 	background-color: transparent;
 
@@ -162,6 +175,41 @@ input[type="submit"] {
 		transform: translateX(-50%);
 		width: 2px;
 		height: 100%;
+	}
+}
+
+.to-cart {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+	border-radius: 100%;
+	background: #aa8f82;
+	border: 1px solid #ffffff;
+	// opacity: 0;
+	// visibility: hidden;
+	transition: all 0.3s;
+
+	position: absolute;
+	bottom: 6px;
+	left: 6px;
+	width: 195px;
+	height: 195px;
+
+	// .to-cart__icon
+	&__icon {
+		width: 46px;
+		height: 46px;
+		background-repeat: no-repeat;
+		background-position: center;
+		background-size: contain;
+	}
+	// .to-cart__text
+	&__text {
+		margin-top: 15px;
+		font-size: 16px;
+		text-transform: uppercase;
+		color: #ffffff;
 	}
 }
 
