--- a/#src/scss/_type-styles.scss
+++ b/#src/scss/_type-styles.scss
@@ -45,32 +45,30 @@
 	}
 
 	h3 {
-		font-weight: 900;
+		font-weight: 700;
+		font-size: 30px;
+		line-height: 1.5;
+		text-transform: uppercase;
+		@media (max-width: 1200px) {
+			@include adaptiv(font-size, 30, 16, 1200, 320);
+		}
+	}
+
+	h4 {
+		font-family: "Bradobrei";
+		font-weight: 400;
 		font-size: 24px;
-		line-height: lh(34, 24);
-		letter-spacing: 0.05em;
+		line-height: 1.5;
 		text-transform: uppercase;
 		@media (max-width: 1200px) {
 			@include adaptiv(font-size, 24, 15, 1200, 320);
 		}
 	}
 
-	h4 {
-		font-weight: 700;
-		font-size: 20px;
-		line-height: lh(30, 20);
-		letter-spacing: 0.05em;
-		text-transform: uppercase;
-		@media (max-width: 1200px) {
-			@include adaptiv(font-size, 20, 14, 1200, 320);
-		}
-	}
-
 	h5 {
 		font-weight: 700;
 		font-size: 16px;
-		line-height: lh(30, 16);
-		letter-spacing: 0.05em;
+		line-height: lh(24, 16);
 		text-transform: uppercase;
 		@media (max-width: 992px) {
 			@include adaptiv(font-size, 16, 13, 992, 320);
@@ -81,7 +79,7 @@
 		margin-bottom: 23px;
 		li {
 			font-size: 20px;
-			line-height: 1.5;
+			line-height: 1.33;
 			@media (max-width: 992px) {
 				@include adaptiv(font-size, 20, 15, 992, 320);
 			}
@@ -105,7 +103,7 @@
 			width: 4px;
 			height: 4px;
 			border-radius: 100%;
-			background-color: #8ca03a;
+			background-color: $hover-text;
 			overflow: hidden;
 		}
 	}
@@ -122,7 +120,7 @@
 			position: absolute;
 			top: 0.05em;
 			left: 0;
-			color: #8ca03a;
+			color: $hover-text;
 		}
 	}
 	.table {
@@ -150,25 +148,28 @@
 		border-collapse: collapse;
 		width: 100%;
 		min-width: 420px;
-		font-size: 14px;
+		font-size: 16px;
 		@media (max-width: 768px) {
 			font-size: 15px;
 		}
 		@media (max-width: 425px) {
 			font-size: 14px;
 		}
+		tr:first-child th:first-child {
+			background: #632c33;
+		}
 		th {
 			padding: 15px 30px;
 			line-height: 1.62;
-			letter-spacing: 0.05em;
+			letter-spacing: 0.1em;
 			text-transform: uppercase;
 			color: #ffffff;
 			border-left: 3px solid #fff;
 			border-right: 3px solid #fff;
 			border-bottom: 3px solid #fff;
-			background: #000000;
+			background: #aa8f82;
 			text-align: left;
-			font-weight: 400;
+			font-weight: 700;
 			@media (max-width: 992px) {
 				padding: 10px 20px;
 			}
@@ -183,9 +184,8 @@
 			}
 		}
 		td {
-			padding: 12px 22px;
-			line-height: 1.3;
-			letter-spacing: 0.05em;
+			padding: 30px 30px;
+			line-height: 1.8;
 			color: #000;
 			border-left: 3px solid #fff;
 			border-right: 3px solid #fff;
