--- a/#src/scss/_third.scss
+++ b/#src/scss/_third.scss
@@ -3,26 +3,30 @@
 	padding-bottom: 122px;
 	background: $dark-red;
 	position: relative;
-	&::before {
-		content: "";
-		position: absolute;
-		bottom: 68px;
-		right: 0;
-		width: 57.6%;
-		height: calc(100% + 493px);
-		background: url("../img/main-decor.png") bottom right / contain no-repeat;
+	@media (max-width: 992px) {
+		padding-top: 70px;
+		padding-bottom: 80px;
 	}
 	// .third__flex
 	&__flex {
 		display: flex;
 		position: relative;
 		z-index: 2;
+		@media (max-width: 800px) {
+			flex-direction: column;
+		}
 	}
 	// .third__left
 	&__left {
 		margin-right: 126px;
 		max-width: 654px;
 		width: 100%;
+		@media (max-width: 992px) {
+			margin-right: 50px;
+		}
+		@media (max-width: 800px) {
+			margin-bottom: 53px;
+		}
 	}
 	// .third__title
 	&__title {
@@ -38,6 +42,50 @@
 		display: flex;
 		flex-direction: column;
 		justify-content: flex-end;
+		position: relative;
+		margin-right: -60px;
+		flex: 1 1 auto;
+		padding-right: 60px;
+		&::before {
+			content: "";
+			position: absolute;
+			bottom: -47px;
+			right: 0;
+			width: 119.6%;
+			height: calc(100% + 738px);
+			background: url("../img/main-decor.png") bottom right / contain no-repeat;
+			@media (max-width: 1634px) {
+				width: 133%;
+			}
+			@media (max-width: 1530px) {
+				bottom: 0;
+			}
+			@media (max-width: 1200px) {
+				width: 110%;
+			}
+			@media (max-width: 800px) {
+				width: 100%;
+				height: 100%;
+			}
+		}
+
+		@media (max-width: 1320px) {
+			padding-right: 40px;
+			margin-right: -40px;
+			flex: 0 0 40%;
+		}
+		@media (max-width: 1200px) {
+			flex: 0 0 35%;
+		}
+		@media (max-width: 800px) {
+			flex: 0 0 auto;
+			min-height: 500px;
+			@include adaptiv(min-height, 500, 350, 800, 320);
+		}
+		@media (max-width: 576px) {
+			padding-right: 20px;
+			margin-right: -20px;
+		}
 	}
 	// .third__btn
 	&__btn {
@@ -45,5 +93,17 @@
 		width: 328px;
 		color: #fff;
 		border: 1px solid #ffffff;
+		position: relative;
+		@media (max-width: 1200px) {
+			min-height: 45px;
+			width: 216px;
+			font-size: 14px;
+		}
+		@media (max-width: 800px) {
+			font-size: 18px;
+			min-height: 65px;
+			max-width: 336px;
+			width: 100%;
+		}
 	}
 }
