--- a/#src/scss/header.scss
+++ b/#src/scss/header.scss
@@ -3,8 +3,13 @@
 	top: 0;
 	left: calc(50% - 960px);
 	width: 300px;
+	z-index: 20;
+	background: $light-color;
 	@media (max-width: 1920px) {
 		left: 0;
+	}
+	@media (max-width: 1320px) {
+		display: none;
 	}
 	// .header__container
 	&__container {
@@ -17,6 +22,9 @@
 	// .header__logo
 	&__logo {
 		margin-bottom: 100px;
+		@media (max-width: 1320px) {
+			margin-bottom: 0;
+		}
 	}
 	// .header__nav
 	&__nav {
@@ -35,17 +43,30 @@
 .logo {
 	display: flex;
 	justify-content: space-between;
+	@media (max-width: 1320px) {
+		align-items: center;
+	}
 	// .logo__img
 	&__img {
 		margin-right: 6px;
 		img {
 			max-width: 67px;
 			max-height: 106px;
+			@media (max-width: 1320px) {
+				max-width: 37px;
+				max-height: 60px;
+			}
+		}
+		@media (max-width: 1320px) {
+			margin-right: 16px;
 		}
 	}
 	// .logo__text
 	&__text {
 		padding-top: 69px;
+		@media (max-width: 1320px) {
+			padding-top: 0;
+		}
 	}
 	// .logo__title
 	&__title {
@@ -61,6 +82,9 @@
 		font-size: 14px;
 		line-height: lh(17, 14);
 		color: #000;
+		@media (max-width: 1320px) {
+			margin-right: 12px;
+		}
 	}
 }
 .nav-header {
@@ -135,7 +159,7 @@
 	}
 }
 
-.submenu {
+.submenu-main {
 	position: absolute;
 	top: 0;
 	left: 0;
@@ -145,15 +169,19 @@
 	display: flex;
 	align-items: center;
 	background: $dark-red;
-	z-index: 5;
+	z-index: 11;
 	transform: translateX(-120%);
 	opacity: 0;
+	visibility: hidden;
 	transition: 0.3s;
 	&--active {
-		display: flex;
+		visibility: visible;
 		opacity: 1;
 		left: 100%;
 		transform: translateX(0);
+	}
+	@media (max-width: 1320px) {
+		display: none;
 	}
 	&__container {
 		display: flex;
@@ -216,6 +244,47 @@
 				text-transform: uppercase;
 				color: #ffffff;
 			}
+		}
+	}
+}
+
+.mob-header {
+	@media (min-width: 1321px) {
+		display: none;
+	}
+	// .mob-header__container
+	&__container {
+		padding-top: 8px;
+		padding-bottom: 8px;
+		display: flex;
+		align-items: center;
+		justify-content: space-between;
+	}
+	// .mob-header__btn
+	&__btn {
+		flex: 0 0 58px;
+		height: 58px;
+		margin-left: 20px;
+		border-radius: 100%;
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		font-size: 10px;
+		line-height: 12px;
+		text-align: center;
+		text-transform: uppercase;
+		color: #000000;
+		border: 1px solid #d2b6a8;
+		background: #fff;
+	}
+	@media (max-width: 576px) {
+		.logo__subtitle {
+			display: none;
+		}
+		.logo__title {
+			max-width: 100px;
+			margin-bottom: 0;
+			@include adaptiv(font-size, 16, 12, 576, 320);
 		}
 	}
 }
