--- a/#src/scss/_breadcrumbs.scss
+++ b/#src/scss/_breadcrumbs.scss
@@ -1,37 +1,67 @@
 .breadcrumbs {
-	padding-bottom: 39px;
-	padding-top: 33px;
-	@media (max-width: 1640px) {
-		@include adaptiv(padding-bottom, 39, 20, 1600, 320);
-		@include adaptiv(padding-top, 33, 20, 1600, 320);
+	padding-bottom: 15px;
+	padding-top: 30px;
+	@media (max-width: 576px) {
+		padding-top: 15px;
 	}
+	// @media (max-width: 1640px) {
+	// 	@include adaptiv(padding-bottom, 39, 20, 1600, 320);
+	// 	@include adaptiv(padding-top, 33, 20, 1600, 320);
+	// }
 	&__container {
 		display: flex;
 		flex-wrap: wrap;
 		align-items: center;
-		a,
-		span {
-			font-size: 14px;
-			line-height: 1.86;
-			letter-spacing: 0.05em;
-			color: #000000;
-			@media (max-width: 576px) {
-				font-size: 13px;
-			}
+		// a,
+		// span {
+		// 	font-size: 14px;
+		// 	line-height: 1.86;
+		// 	letter-spacing: 0.05em;
+		// 	color: #000000;
+		// 	@media (max-width: 576px) {
+		// 		font-size: 13px;
+		// 	}
+		// }
+	}
+
+	a {
+		font-size: 12px;
+		line-height: 2;
+		letter-spacing: 0.1em;
+		text-decoration-line: underline;
+		text-transform: uppercase;
+		color: #715648;
+		position: relative;
+		@media (max-width: 1200px) {
+			@include adaptiv(font-size, 12, 10, 1200, 320);
+		}
+	}
+
+	.home {
+		padding-left: 23px;
+		&::before {
+			content: "";
+			position: absolute;
+			top: 50%;
+			left: 0;
+			transform: translateY(-50%);
+			width: 12px;
+			height: 7px;
+			background: url("../img/breadcrumbs-arrow.svg") center / contain no-repeat;
 		}
 	}
 	// .breadcrumbs__break
-	&__break {
-		margin-left: 7px;
-		margin-right: 7px;
-		width: 32px;
-		height: 7px;
-		background: url("../img/break.svg") center / contain no-repeat;
-		@media (max-width: 576px) {
-			width: 22px;
-			height: 6px;
-		}
-	}
+	// &__break {
+	// 	margin-left: 7px;
+	// 	margin-right: 7px;
+	// 	width: 32px;
+	// 	height: 7px;
+	// 	background: url("../img/break.svg") center / contain no-repeat;
+	// 	@media (max-width: 576px) {
+	// 		width: 22px;
+	// 		height: 6px;
+	// 	}
+	// }
 
 	.currnet-item {
 	}
