--- a/#src/scss/styles.scss
+++ b/#src/scss/styles.scss
@@ -4,7 +4,7 @@
 @import "_overall.scss";
 @import "_type-styles.scss";
 // @import "_burger.scss";
-// @import "_breadcrumbs.scss";
+@import "_breadcrumbs.scss";
 
 // modals
 @import "_modal.scss";
