--- a/#src/scss/delivery.scss
+++ b/#src/scss/delivery.scss
@@ -42,6 +42,7 @@
 		padding-bottom: 18px;
 		padding-right: 10px;
 		border-top: 1px solid #c4c4c4;
+		cursor: pointer;
 		@media (max-width: 576px) {
 			padding-top: 10px;
 			padding-bottom: 10px;
