--- a/#src/scss/footer.scss
+++ b/#src/scss/footer.scss
@@ -42,9 +42,10 @@
 		@media (max-width: 1066px) {
 			font-size: 16px;
 		}
-		// @media (max-width: 890px) {
-		// 	@include adaptiv(font-size, 18, 15, 1215, 320);
-		// }
+		transition: 0.3s;
+		&:hover {
+			color: #fff;
+		}
 	}
 }
 .contacts-footer {
@@ -85,6 +86,11 @@
 
 				@media (max-width: 890px) {
 					font-size: 24px;
+				}
+
+				transition: 0.3s;
+				&:hover {
+					color: #fff;
 				}
 			}
 		}
@@ -146,5 +152,12 @@
 			@include adaptiv(font-size, 14, 12, 890, 320);
 			letter-spacing: 0.1em;
 		}
+
+		// &:nth-child(2) {
+		// 	transition: 0.3s;
+		// 	&:hover {
+		// 		color: #fff;
+		// 	}
+		// }
 	}
 }
