--- a/#src/scss/hero.scss
+++ b/#src/scss/hero.scss
@@ -27,13 +27,16 @@
 
 	&__btn-p,
 	&__btn-n {
+		display: none;
 		position: absolute;
 		top: 50%;
-
 		background: url("../img/hero-slider-arrow.svg") center / contain no-repeat;
 		z-index: 6;
 		width: 16px;
 		height: 31px;
+		@media (max-width: 992px) {
+			display: block;
+		}
 	}
 	&__btn-p {
 		left: 10px;
@@ -245,6 +248,7 @@
 		font-size: 18px;
 		line-height: 1.56;
 		color: #ffffff;
+
 		@media (max-width: 1100px) {
 			font-size: 16px;
 		}
