--- a/#src/scss/_overall.scss
+++ b/#src/scss/_overall.scss
@@ -310,3 +310,17 @@ input[type="submit"] {
 		transform: translateX(-100%);
 	}
 }
+
+@keyframes fadeInDown {
+	from {
+		opacity: 0;
+		-webkit-transform: translate3d(0, -100%, 0);
+		transform: translate3d(0, -100%, 0);
+	}
+
+	to {
+		opacity: 1;
+		-webkit-transform: translate3d(0, 0, 0);
+		transform: translate3d(0, 0, 0);
+	}
+}
