--- a/#src/scss/_third.scss
+++ b/#src/scss/_third.scss
@@ -58,7 +58,7 @@
 				width: 133%;
 			}
 			@media (max-width: 1530px) {
-				bottom: 0;
+				bottom: 30%;
 			}
 			@media (max-width: 1200px) {
 				width: 110%;
@@ -66,6 +66,7 @@
 			@media (max-width: 800px) {
 				width: 100%;
 				height: 100%;
+				bottom: 0;
 			}
 		}
 
