--- a/#src/scss/delivery.scss
+++ b/#src/scss/delivery.scss
@@ -39,7 +39,7 @@
 		justify-content: space-between;
 		align-items: center;
 		padding-top: 12px;
-		padding-bottom: 18px;
+		padding-bottom: 12px;
 		padding-right: 10px;
 		border-top: 1px solid #c4c4c4;
 		cursor: pointer;
@@ -92,7 +92,7 @@
 		h6,
 		ul,
 		ol,
-		table {
+		.table {
 			margin-bottom: 15px;
 		}
 		p {
