--- a/#src/scss/_breadcrumbs.scss
+++ b/#src/scss/_breadcrumbs.scss
@@ -28,16 +28,12 @@
 		font-size: 12px;
 		line-height: 2;
 		letter-spacing: 0.1em;
-		text-decoration-line: underline;
 		text-transform: uppercase;
 		color: #715648;
 		position: relative;
+		white-space: nowrap;
 		@media (max-width: 1200px) {
 			@include adaptiv(font-size, 12, 10, 1200, 320);
-		}
-
-		&:hover {
-			text-decoration-line: none;
 		}
 	}
 
@@ -52,6 +48,20 @@
 			width: 12px;
 			height: 7px;
 			background: url("../img/breadcrumbs-arrow.svg") center / contain no-repeat;
+		}
+		&::after {
+			content: "";
+			margin-left: 23px;
+			position: absolute;
+			bottom: 0;
+			left: 0;
+			height: 1px;
+			width: calc(100% - 23px);
+			background: #715648;
+			transition: 0.3s;
+		}
+		&:hover::after {
+			width: 0px;
 		}
 	}
 	// .breadcrumbs__break
