--- a/#src/scss/_overall.scss
+++ b/#src/scss/_overall.scss
@@ -16,6 +16,7 @@
 	max-width: 1620px;
 	padding: 0 60px;
 	margin: 0 auto;
+	width: 100%;
 	@media (max-width: 1320px) {
 		padding-left: 40px;
 		padding-right: 40px;
