--- a/#src/scss/_type-styles.scss
+++ b/#src/scss/_type-styles.scss
@@ -20,7 +20,7 @@
 	h6,
 	ul,
 	ol,
-	table {
+	.table {
 		margin-bottom: 25px;
 		@media (max-width: 992px) {
 			@include adaptiv(margin-bottom, 25, 15, 992, 320);
