--- a/#src/scss/hero.scss
+++ b/#src/scss/hero.scss
@@ -7,7 +7,7 @@
 
 		.swiper-slide-active {
 			.left-slide-hero__img {
-				animation: fadeInDown 0.4s;
+				animation: fadeInDown 0.7s;
 				font-size: 1px;
 			}
 			.right-slide-hero__img {
@@ -74,6 +74,7 @@
 		padding-left: 40px;
 	}
 	@media (max-width: 576px) {
+		padding-left: 20px;
 	}
 	// .top-hero__title
 	&__title {
